--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "nodemailer": "^6.9.13",
     "sharp": "^0.33.3",
     "slugify": "^1.6.6",
-    "uniqid": "^5.4.0"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
